--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
 </head>
 <body>
     <div id="app">
-	    <div v-show="mostrar">
-		    <h1>Este es mi título</h1>
-		    <h2>Este es mi subtítulo</h2>
-		    <a :href="url" target="_blank">Ir a {{ pagina }}</a>
-	    </div>
-		<div v-show="!mostrar">
-		   Esto está oculto
-		</div>
+	    <h1>{{ titulo | uppercase}}</h1>
+	    <h2>{{ subtitulo | lowercase }}</h2>
     </div>
 
 	<script src="https://unpkg.com/vue"></script>
 	<script type="text/javascript">
 		let app = new Vue({
-		  el: '#app',
-		  data: {
-			url: 'https://google.com',
-			pagina: 'Google',
-			mostrar: true
-		  }
+		  	el: '#app',
+		  	data: {
+				titulo: 'Estás en platzi',
+				subtitulo: 'Estás viendo el curso de Vue.js'
+		  	},
+		  	filters: {
+		  		uppercase: function (str) {
+		  			return str.toUpperCase()
+		  		},
+		  		lowercase: function (str) {
+		  			return str.toLowerCase() 
+		  		}
+		  	}
 		})
 	</script>
 </body>
