--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
   	<title>Curso Vue.js</title>
 </head>
 <body>
-    <div id="app">
-	    <h1>{{ titulo | uppercase}}</h1>
-	    <h2>{{ subtitulo | lowercase }}</h2>
-    </div>
+  	<div id="app">
+   	 	<button @click="contador++">Sumar 1</button>
+    	<button @click="contador--">Restar 1</button>
+    	El contador está en {{ contador }}
+  	</div>
 
-	<script src="https://unpkg.com/vue"></script>
-	<script type="text/javascript">
-		let app = new Vue({
-		  	el: '#app',
-		  	data: {
-				titulo: 'Estás en platzi',
-				subtitulo: 'Estás viendo el curso de Vue.js'
-		  	},
-		  	filters: {
-		  		uppercase: function (str) {
-		  			return str.toUpperCase()
-		  		},
-		  		lowercase: function (str) {
-		  			return str.toLowerCase() 
-		  		}
-		  	}
-		})
-	</script>
+  	<script src="https://unpkg.com/vue"></script>
+  	<script type="text/javascript">
+	    let app = new Vue({
+	      	el: '#app',
+	      	data: {
+	        	contador: 0
+	      	}//,
+	      	// methods: {
+	      	//   sumar: function () {
+	      	//     this.contador++
+	      	//   },
+	      	//   restar: function () {
+	      	//     this.contador--
+	      	//   }
+	      	// }
+	    })
+	  </script>
 </body>
 </html>
