--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
   	<title>Curso Vue.js</title>
 </head>
 <body>
   	<div id="app">
-   	 	<button @click="contador++">Sumar 1</button>
-    	<button @click="contador--">Restar 1</button>
-    	El contador está en {{ contador }}
+   	 	<input type="text" name="nombre" placeholder="Ingresa tu nombre" v-model="nombre ">
+   	 	<p>Tu nombre en mayúscula es {{ nombre | uppercase }}</p>
+
+   	 	<form @submit.prevent="submit" >
+   	 		<h2>¿Cuáles son tus cursos favoritos?</h2>
+   	 		<input v-model="cursos" type="checkbox" id="vue" value="vue">
+			<label for="vue">Curso de Vue.js</label>
+			<input v-model="cursos" type="checkbox" id="seo" value="seo">
+			<label for="seo">Curso de SEO</label>
+			<input v-model="cursos" type="checkbox" id="react" value="react">
+			<label for="react">Curso de React y Redux</label>
+			<input v-model="cursos" type="checkbox" id="growth" value="growth">
+			<label for="growth">Curso de Growth Marketing</label>
+   	 		<button type="submit">Enviar</button>
+   	 	</form>
   	</div>
 
   	<script src="https://unpkg.com/vue"></script>
@@ -15,16 +28,20 @@
 	    let app = new Vue({
 	      	el: '#app',
 	      	data: {
-	        	contador: 0
-	      	}//,
-	      	// methods: {
-	      	//   sumar: function () {
-	      	//     this.contador++
-	      	//   },
-	      	//   restar: function () {
-	      	//     this.contador--
-	      	//   }
-	      	// }
+	        	nombre: '',
+	        	cursos: []
+	      	},
+	      	filters: {
+	      		uppercase: function (str) {
+	      			return str.toUpperCase()
+	      		}
+	      	},
+	      	methods: {
+	      		submit: function () {
+	      			console.log('Se ejecuta el metodo submit')
+	      			console.log(this.cursos)
+	      		}
+	      	}
 	    })
 	  </script>
 </body>
